# PhoenixOS-Remoting

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  bak.rs  config-rdma.toml  config.toml  handle.py  init.sh  run_apis.py  run_apps.py
.gitlab/: MERGE_REQUEST_TEMPLATE.md
.gitlab/issue_templates/: design.md
client/: Cargo.toml  build.rs  hook.toml
client/src/: Makefile  cuda_runtime.rs  dl.rs  elf.rs  lib.rs  phos.rs  test_device.cu
client/src/clibelf/: list.c
client/src/cuda_hijack/: cudart.rs  cudart_hijack.rs  cudart_hijack_custom.rs  mod.rs  nvml_hijack.rs
client/src/elf/: Makefile  README.md  elf2.c  elf2.h  interfaces.h  interfaces.rs  mod.rs  utils.c  utils.h
client/src/hijack/: .gitignore  cublas_hijack.rs  cublas_hijack_custom.rs  cublas_unimplement.rs  cuda_hijack.rs  cuda_hijack_custom.rs  cuda_hijack_utils.rs  cuda_unimplement.rs  cudart_hijack.rs  cudart_hijack_custom.rs  cudart_unimplement.rs  cudnn_hijack.rs  cudnn_hijack_custom.rs  cudnn_unimplement.rs  mod.rs  nvml_hijack.rs  nvml_unimplement.rs
client/src/passthrough/: .gitignore  mod.rs
codegen/: Cargo.toml  README.md
codegen/hookdef/: Cargo.toml
codegen/hookdef/src/: lib.rs
codegen/src/: hook_fn.rs  lib.rs  use_thread_local.rs  utils.rs
codegen/tests/: async_api.rs  execution.rs  gen_unimplement.rs  hijack.rs  serialization.rs  transportable.rs  unimplement.rs
codegen_test/: Cargo.toml  README.md
codegen_test/src/: lib.rs  main.rs
cudalib/: Cargo.toml  build.rs
cudasys/: .gitignore  Cargo.toml  README.md  build.rs
cudasys/hookgen/: Cargo.toml
cudasys/hookgen/src/: lib.rs
cudasys/include/: cuda_wrapper.h  cudart_wrapper.hpp
cudasys/src/: cublas.rs  cublasLt.rs  cuda.rs  cudart.rs  cudnn.rs  lib.rs  nvml.rs  types.rs
cudasys/src/bindings/: README.md
cudasys/src/hooks/: cublas.rs  cuda.rs  cudart.rs  cudnn.rs  mod.rs  nccl.rs  nvml.rs  nvrtc.rs
cudasys/src/types/: cublas.rs  cublasLt.rs  cuda.rs  cudart.rs  cudnn.rs  mod.rs  nvml.rs
device-buffer/: Cargo.toml
device-buffer/src/: lib.rs
device_buffer/: Cargo.toml
device_buffer/src/: lib.rs  shared_memory_buffer.rs  utils.rs
device_buffer/tests/: shared_memory_buffer_test.rs
docs/: hook_overview.graffle  implement_new_apis.md
log/: extract.py  extract_client.py  extract_server.py  extract_timeline.py  merge.py
measure/: Cargo.toml
measure/src/: lib.rs
network/: Cargo.toml  README.md
network/examples/: shm_client.rs  shm_server.rs
network/src/: buffer.rs  lib.rs
network/src/ringbufferchannel/: README.md  channel.rs  emulator.rs  fakemutex.rs  mod.rs  rdma.rs  shm.rs  tcp.rs  test.rs  types.rs  utils.rs
network/src/type_impl/: basic.rs  cuda.rs  cudart.rs  mod.rs  nvml.rs
network/tests/: channel_stress.rs  rdma_comm.rs  tcp_test.rs  type_serialization.rs  type_transfer.rs
rperf/: Makefile  README.md  api.py  sql_commands.md  work.py
rperf/baseline_model/: model.py
rperf/disaggregation_model/: README.md  model.py
rperf/libs/: Makefile
rperf/libs/log_breakpoint/: Makefile  log_breakpoint.cu
rperf/libs/vanilla/: .gitignore  CMakeLists.txt
rperf/libs/vanilla/src/common/: hook.h  timer.cpp  timer.h  trace.cpp  trace.h
rperf/libs/vanilla/src/cublas/: cublas_hook.cpp
rperf/libs/vanilla/src/cublasLt/: cublasLt_hook.cpp
rperf/libs/vanilla/src/cuda/: cuda_hook.cpp
rperf/scripts/: perf.sh  run_interception.sh  trace_exe.sh  trace_gpu_time.sh  trace_kernel_group.sh
rperf/sql_parser/: parser.py
rperf/typedict/: blocking.py  remoting.py
server/: Cargo.toml  build.rs
server/src/: cuda_runtime.rs  lib.rs  main.rs  phos.rs
server/src/cuda_lib/: cuda.rs  cudart.rs  mod.rs  nvml.rs
server/src/dispatcher/: .gitignore  cublas_exe.rs  cublas_exe_custom.rs  cuda_exe.rs  cuda_exe_custom.rs  cuda_exe_utils.rs  cudart_exe.rs  cudart_exe_custom.rs  cudnn_exe.rs  cudnn_exe_custom.rs  mod.rs  nvml_exe.rs
tests/apps/: README.md  run.sh  run_debug.sh  test.py  test.sh  tmp.list
tests/apps/infer/BERT/: inference.py
tests/apps/infer/BERT-base-uncased/: inference.py
tests/apps/infer/ResNet18_Cifar10_95.46/: gen_model.py  inference.py
tests/apps/infer/STABLEDIFFUSION-v1-4/: inference.py
tests/apps/infer/gpt2/: inference.py
tests/apps/infer/resnet/: inference.py
tests/apps/lightning_logs/version_0/: events.out.tfevents.1718867693.meepo3.526740.0
tests/apps/lightning_logs/version_1/: events.out.tfevents.1718870014.meepo3.527613.0
tests/apps/train/BERT-pytorch/: .gitignore  train.py
tests/apps/train/ResNet18_Cifar10_95.46/: train.py
tests/apps/train/STABLEDIFFUSION-v1-4/: requirements.txt  tmp
tests/apps/train/minGPT/: .gitignore  train.py
tests/apps/train/naifu-diffusion/: .gitignore  config.yaml  install.sh  requirements.txt  train.py  types.py
tests/apps/train/resnet/: inference.py  test.py  train.py
tests/cuda_api/: .gitignore  CMakeLists.txt  startclient.sh  startclient_debug.sh  test_asyncmemcpy.cu  test_convolution_forward.cu  test_create_tensor_descriptor.cu  test_ctx_get_state.cu  test_cublas_basic.cu  test_cudnn_basic.cu  test_cudnn_minimal.cu  test_device.cu  test_error.cu  test_launch_kernel.cu  test_memcpy.cu  test_memcpy_d2h.cu  test_memcpy_h2d.cu  test_nvml.cu  test_stream.cu  test_stream_synchronize.cu  test_streamsync.cu  test_stress.cu  test_stress_simple.cu
tests/disaggregation_motivation/: motiv.py
tests/performance/: default_infer.json  default_train.json  run_byte_track.sh  run_byte_track_infer.sh  run_byte_track_train.sh  run_infer.sh  run_infer_cfg.sh  run_local_infer.sh  run_training.sh  run_training_cfg.sh
tests/pics/: run_infer.sh  run_training.sh
tests/pytorch_minimal/: pytorch_minimal.py  required_api.md  required_api.txt  startpy.sh
theo_predictor/: CMakeLists.txt  Makefile  build.sh
theo_predictor/src/common/: trace.cpp  trace.h
theo_predictor/src/cublas/: cublas_hook.cpp
theo_predictor/src/cudart/: cudart_hook.cpp
theo_predictor/src/cudnn/: cudnn_hook.cpp
theo_predictor/src/nvml/: nvml_hook.cpp
theo_predictor/src/nvrtc/: nvrtc_hook.cpp
xpuremoting/: config.toml
(+15 files in other folders)
