[package]
name = "client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
cudasys = { path = "../cudasys" }
network = { path = "../network" }
codegen = { path = "../codegen" }
lazy_static = "1.4.0"

[lib]
crate-type = ["cdylib"]
