[package]
name = "client"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
cudasys = { workspace = true }
network = { workspace = true }
codegen = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
lazy_static = { workspace = true }
small_ctor = "0.1"
core_affinity = { workspace = true }
lz4_flex = { version = "0.11", default-features = false }
elf = "0.7"

[build-dependencies]
cudasys = { workspace = true }
hookgen = { workspace = true }

[lib]
crate-type = ["cdylib"]

[features]
# default = ["rdma"]
# default = ["emulator"]
rdma = []
emulator = []
async_api = []
shadow_desc = []
local = []

[lints]
workspace = true
