[package]
name = "codegen"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lib]
proc-macro = true

[dev-dependencies]
cudasys = { workspace = true }
network = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
lazy_static = { workspace = true }

[features]
async_api = []
shadow_desc = []

[lints]
workspace = true
