[package]
name = "cudasys"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
codegen = { path = "../codegen" }
network = { path = "../network" }
num = "0.2"
num-traits = "0.2"
num-derive = "0.4"

[build-dependencies]
bindgen = "0.59.1"
glob = "0.3"
regex = "1.0"
