[package]
name = "cudasys"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
codegen = { workspace = true }
network = { workspace = true }
num = "0.2"
num-traits = "0.2"
num-derive = "0.4"

[build-dependencies]
bindgen = "0.59.1"
glob = "0.3"
regex = "1.0"
syn = { workspace = true }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true
