[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = { path = "../codegen" }
libc = "*"
log = "0.4.0"
errno = "0.2.7" 
chrono = "0.4.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
lazy_static = "1.4.0"
KRdmaKit = { git = "https://github.com/Gahow/krcore-artifacts.git", branch = "feat/send_mr", features = ["user", "OFED_5_4"] }

[dev-dependencies]
cudasys = { path = "../cudasys" }