[package]
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
network = { path = "../network" }
codegen = { path = "../codegen" }
log = "0.4.0"
env_logger = "0.9"
lazy_static = "1.4.0"

[build-dependencies]
glob = "0.3"
