[package]
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
cudasys = { path = "../cudasys" }
network = { path = "../network" }
codegen = { path = "../codegen" }
log = "0.4.0"
env_logger = "0.9"
lazy_static = "1.4.0"

[build-dependencies]
glob = "0.3"

[features]
# default = ["rdma"]
# default = ["shm", "emulator"]
default = ["shm"]
shm = []
rdma = []
emulator = []
async_api = []
shadow_desc = []

[[bin]]
name = "server"
path = "src/main.rs"