[package]
name = "server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
cudasys = { workspace = true }
network = { workspace = true }
codegen = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
lazy_static = { workspace = true }
core_affinity = { workspace = true }

[build-dependencies]
cudasys = { workspace = true }
hookgen = { workspace = true }

[features]
# default = ["rdma"]
default = ["shm", "emulator"]
# default = ["shm"]
shm = []
rdma = []
emulator = []
log_rperf = []
async_api = []
shadow_desc = []

[[bin]]
name = "server"
path = "src/main.rs"

[lints]
workspace = true
